# SuppressScreenSaver

./: .editorconfig  Cargo.toml  LICENSE  README.md  build.rs  justfile  resource.rc
.crossnote/: config.js  head.html  parser.js  style.less
doc/: Rust版.md  keycode.txt  ⧉C#でスクリーンセーバーと抑止をするアプリを作りました.md
doc/cs_ver/doc/: WinUser.h  ⧉C#でスクリーンセーバーと抑止をするアプリを作りました.md
doc/cs_ver/src/: ConsoleMessageReceiverApp.cs  ConsoleMessageSenderApp.cs  SimpleSuppressScreenSaver.cs  SuppressScreenSaver.cs  SuppressScreenSaverEvents.cs
images/: SimpleScreenSaver.ai  SuppressScreenSaver.ai  SuppressScreenSaverEvents.ai
src/: CSC_CLI64_DragDropHere.bat  CSC_Win32_DragDropHere.bat  CSC_Win64_DragDropHere.bat  SimpleScreenSaver.cs  SuppressScreenSaver.cs  config.rs  main.rs  monitor.rs  screen_off.rs  suppress.rs  tray.rs
tests/: CSC_CLI64_DragDropHere.bat  MonitorPower.cs  dump_src.md  dump_src.py
