[package]
name = "SuppressScreenSaver"
version = "0.1.0"
edition = "2021"

[dependencies]
# Windows API 操作用
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Power",
] }

[build-dependencies]
embed-resource = "2.4"
